<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/appBackground"
    tools:context=".SetPreferencesActivity" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/app_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@+id/app_logo"
            android:layout_toRightOf="@+id/app_logo"
            android:paddingBottom="16dip"
            android:text="@string/preference_view"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:orientation="horizontal">

    <TextView
        android:id="@+id/book_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_name"
        android:textColor="@color/white"/>
    
    <EditText 
        android:id="@+id/bookname_value"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:maxLength="70"
        android:hint="@string/bookname_hint"
        android:background="@color/white"
        android:layout_marginLeft="15dp"/>
    </LinearLayout>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp">
    </View>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:orientation="horizontal">
    
    <TextView
        android:id="@+id/book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_author"
        android:textColor="@color/white"/>
    
    <EditText 
        android:id="@+id/bookauthor_value"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:maxLength="70"
        android:hint="@string/bookauthor_hint"
        android:layout_marginLeft="10dp"
        android:background="@color/white"
        />
    </LinearLayout>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp">
    </View>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:orientation="horizontal">
    
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description" 
        android:textColor="@color/white"/>

        <EditText
            android:id="@+id/description_value"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68dp"
            android:background="@color/white"
            android:hint="@string/description_hint"
            android:inputType="textMultiLine"
            android:maxLength="255" />
    </LinearLayout>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp">
    </View>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
       	android:orientation="horizontal">

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:width="100dp"
            android:background="@color/buttonBackground"
            android:onClick="onSave"
            android:text="@string/save_btn" />

        <Button
            android:id="@+id/display_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:width="100dp"
            android:background="@color/buttonBackground"
            android:onClick="onDisplay"
            android:text="@string/display_btn" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:width="100dp"
            android:background="@color/buttonBackground"
            android:onClick="onCancel"
            android:text="@string/cancel_btn" />
    
        </LinearLayout>
    

</LinearLayout>
