<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/appBackground"
    tools:context=".SQLiteActivity" >

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/app_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/app_logo"
        android:layout_toRightOf="@+id/app_logo"
        android:paddingBottom="16dip"
        android:text="@string/sqlite_view"
        android:textColor="@color/white"
        android:textSize="@dimen/font_large" />

    <EditText
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_msg"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-28dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textMultiLine"
        android:minWidth="250dp"
        android:minHeight="160dp"
        android:gravity="start"/>

    <TextView
        android:id="@+id/enter_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="197dp"
        android:text="@string/blog_msg"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/save_msg"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/msg"
        android:layout_alignLeft="@+id/msg"
        android:layout_marginLeft="-132dp"
        android:layout_marginTop="123dp"
        android:background="@color/buttonBackground"
        android:onClick="saveMessage"
        android:text="@string/save_msg" />

    <Button
        android:id="@+id/display_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/save_msg"
        android:layout_alignBottom="@+id/save_msg"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="126dp"
        android:layout_toRightOf="@+id/save_msg"
        android:width="100dp"
        android:background="@color/buttonBackground"
        android:onClick="onDisplay"
        android:text="@string/display_btn" />

    <Button
        android:id="@+id/cancel_msg"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/save_msg"
        android:layout_alignBottom="@+id/save_msg"
        android:layout_marginLeft="166dp"
        android:layout_marginBottom="9dp"
        android:layout_toRightOf="@+id/save_msg"
        android:background="@color/buttonBackground"
        android:onClick="cancelMessage"
        android:text="@string/cancel_msg" />

</RelativeLayout>
