<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/appBackground"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/app_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/app_logo"
        android:layout_toRightOf="@+id/app_logo"
        android:paddingBottom="16dip"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/font_large" />

    <Button
        android:id="@+id/open_preferences"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="140dp"
        android:layout_marginRight="48dp"
        android:layout_toLeftOf="@+id/open_sqlite"
        android:background="@color/buttonBackground"
        android:onClick="openPreference"
        android:text="@string/open_preferences" />

    <Button
        android:id="@id/open_sqlite"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="140dp"
        android:layout_marginRight="52dp"
        android:background="@color/buttonBackground"
        android:onClick="saveInDatabase"
        android:text="@string/open_sqlite" />
   
    
    <TextView android:id="@+id/saved_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:layout_below="@id/open_sqlite"
        android:layout_centerInParent="true"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp"
        android:background="@color/buttonBackground"
        android:onClick="exitApp"
        android:text="@string/btn_close" />

</RelativeLayout>
